# nichirin

./: .gitattributes  .gitignore  .mxproject  CMakeLists.txt  README.md  nichirin.ioc  nichirin_V2.ioc
Core/Inc/: boot_selftest.h  bright_map.h  flash_cfg.h  font.h  fw_version.h  lcd_st7735.h  lv_conf.h  main.h  st7735.h  stm32g0xx_hal_conf.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  ui_damping.h  watchdog.h
Core/Inc/app/: app.h  mode_manager.h
Core/Inc/drivers/: encoder.h  tlc59116.h
Core/Inc/led/: led_ctrl.h  led_effects.h  led_engine.h  led_types.h
Core/Inc/storage/: cfg_store.h  config_store.h  flash_cfg.h
Core/Inc/stream/: lcd_streamer.h  spectrum_led.h  usb_stream_rx.h  video_proto.h
Core/Inc/ui/: keypad_port.h  lcd_port.h  simple_menu.h  ui.h  ui_led_menu.h
Core/Src/: boot_selftest.c  bright_map.c  flash_cfg.c  lcd_st7735.c  main.c  st7735.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  ui_damping.c  watchdog.c
Core/Src/app/: app.c  mode_manager.c
Core/Src/drivers/: encoder.c  tlc59116.c
Core/Src/led/: led_ctrl.c  led_effects.c  led_engine.c
Core/Src/storage/: cfg_store.c  config_store.c  flash_cfg.c
Core/Src/stream/: lcd_streamer.c  spectrum_led.c  usb_stream_rx.c  video_proto.c
Core/Src/ui/: keypad_port.c  lcd_port.c  simple_menu.c  ui.c  ui_led_menu.c
USB_Device/App/: usbd_cdc_if.c
cmake/stm32cubemx/: CMakeLists.txt
tools/: video_stream_sender_GUI.py
